--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 python-telegram-bot==20.7
 pyrebase4==4.6.0
 python-dotenv==1.0.0
-pydantic==1.10.13
+pydantic==1.10.
+setuptools>=68.0.0
+wheel
 telegram
