--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-setuptools==79.7.0  # ← Фиксируем версию до удаления pkg_resources
-requests==2.31.0    # ← Новая версия без проблем с urllib3
-urllib3==2.0.7      # ← Явно указываем версию
+setuptools==80.0.0
+requests==2.31.0
+urllib3==2.0.7
 python-telegram-bot==20.7
 pyrebase4==4.6.0
 python-dotenv==1.0.0
