--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,7 @@ python-dotenv==0.21.0
 pydantic==1.9.0
 requests==2.28.2
 urllib3==1.26.15
+requests-toolbelt==0.9.1
+oauth2client==4.1.3
+gcloud==0.18.3
 telegram
